# senseo

./: pyproject.toml
Doc/: external_sources.md
Doc/Bauteile/Boiler/: Wasserkocher.ipynb
Doc/Bauteile/Pumpe/: pumpe.md
Doc/Bauteile/temperatur_sensor/: ntc.ipynb  ntc_10k.csv
Simulink/: go.m  senseo_lib.slx  senseo_model.slx  test_boiler.slx  test_power.slx
Simulink/comp_lib/: boiler.slx  fluid.slx  ntc_lookup.ssc  power_supply.slx  pump.slx  sensors.slx
Simulink/data/: ntc.mat
Simulink/tests/: test_boiler.slx  test_fluid.slx  test_ntc.slx  test_ntc.slx.autosave
