[tool.poetry]
name = "senseo"
version = "0.1.0"
description = ""
authors = ["LosCommodore <60575868+LosCommodore@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
