[tool.poetry]
name = "senseo"
version = "0.1.0"
description = ""
authors = ["LosCommodore <60575868+LosCommodore@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
tabula-py = {extras = ["jpype"], version = "^2.9.3"}
pandas = "^2.2.2"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
